--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 :root {
---cor-fundo: #01080E;
---cor-principal: #0B0D20;
---cor-secundaria: #212333;
---cor-destaque: #2BDEFD;
---cor-texto: #D7F9FF;
+    --cor-fundo: #01080E;
+    --cor-principal: #0B0D20;
+    --cor-secundaria: #212333;
+    --cor-destaque: #2BDEFD;
+    --cor-texto: #D7F9FF;
 }
 
-body{
-    background-image:url('fundo.jpg');/
-    caminho da imagem/image: .png;
+body {
+    /* Cor de fundo definida pela sua variável */
+    background-color: var(--cor-fundo); 
     color: var(--cor-texto);
     display: flex;
     justify-content: center;
@@ -16,27 +16,27 @@ body{
     min-height: 100vh;
 }
 
-.caixa-principal{
+.caixa-principal {
     background-color: var(--cor-principal);
     width: 90%;
     text-align: center;
     padding: 20px;
 }
 
-h1{
+h1 {
     color: var(--cor-destaque);
 }
 
 button {
     background-color: var(--cor-secundaria);
-    color: var(--cor-texto)
+    color: var(--cor-texto);
     border: none;
     border-radius: 15px;
     padding: 15px;
     transition: background-color 0.3s;
 }
 
-button:hover{
+button:hover {
     background-color: var(--cor-destaque);
     color: var(--cor-principal);
 }
